--- a/data/readme
+++ b/data/readme
@@ -1,3 +1,1 @@
-Pacific Standard Time 2017 - Primary - Sheet1.csvc - All Pacific Standard Time exhibits with metadata created from the PST website. 
-
-LA/LAPopulation_CensustTract_Data.zip - Data downloaded from Social Explorer. 2015 American Community Survey Data.
+data related to map-a-thons
